# simple-GL

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile.BeOS  Makefile.Linux  Makefile.am  Makefile.gcc  Makefile.icc  Makefile.in  Makefile.manual  ematrix.h  evektor.h  libsimpleGL.dsp  makelibs  sglmatrixobj.cpp  sglmatrixobj.h  sglmetaobj.cpp  sglmetaobj.h  sglmisc.c  sglmisc.h  sglobj.cpp  sglobj.h  sglobjbase.cpp  sglobjbase.h  sglsdlspace.cpp  sglsdlspace.h  sglshptr.h  sglsignal.h  sglspace.cpp  sglspace.h  sglvektor.cpp  sglvektor.h  simpleGL.dsp  simpleGL.dsw  simpleGL.ncb  simpleGL.opt  todo
data/pics/: Shine0.bw  Shine1.bw
debian/: README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  dirs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  libsgl-dev.dirs  libsgl-dev.install  libsgl.dirs  libsgl.install  libsgl.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  sgl-default.ex  sgl.doc-base.EX  watch.ex
ftgl/: FTContour.cpp  config.h
ftgl/FTFont/: FTFont.cpp
helper/: Makefile.am  Makefile.in  Shine2.bw  sglcamera.cpp  sglcamera.h  sglclipplane.cpp  sglclipplane.h  sgldisplist.cpp  sgldisplist.h  sglgrid.cpp  sglgrid.h  sglhelper.cpp  sglhelper.h  sgllensflare.cpp  sgllensflare.h  sgllight.cpp  sgllight.h
primitives/: Makefile.am  Makefile.in  sglflobj.cpp  sglflobj.h  sglgeosphere.cpp  sglgeosphere.h  sglicosahedron.cpp  sglicosahedron.h  sglloft.cpp  sglloft.h  sglneck.cpp  sglneck.h  sglpolygonobj.cpp  sglpolygonobj.h  sglquader.cpp  sglquader.h  sglquadricobj.cpp  sglquadricobj.h  sglvieleck.cpp  sglvieleck.h
qt4_glue/: CMakeLists.txt  qt4_sample1.cpp  qt4_sample2.cpp  qt4_sample3.cpp  qt_glue.kdevelop  qt_glue.kdevses  qt_glue.pro  sglqtmultispacemgr.cpp  sglqtmultispacemgr.h  sglqtspace.cpp  sglqtspace.h
qt4_glue/debian/: README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  init.d.ex  libsgl-qtglue-default.ex  libsgl-qtglue-dev.dirs  libsgl-qtglue-dev.install  libsgl-qtglue.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
qt4_glue/templates/: h
qt_glue/: CMakeLists.txt  sample1.cpp  sample2.cpp  sample3.cpp  sglqtmultispacemgr.cpp  sglqtspace.cpp  sglqtspace.h  stlsample.cpp
qt_glue/qt4_glue/: CMakeLists.txt
qt_glue/qt5_glue/: CMakeLists.txt
sample_classes/: Makefile.am  Makefile.in  sglplanet.cpp  sglplanet.h  sglpointcloud.cpp  sglpointcloud.h  sglrekgeb.cpp  sglrekgeb.h
text/: Makefile.am  Makefile.in  sgl3dtext.cpp  sgl3dtext.h  sglconsole.cpp  sglconsole.h  sgltext.cpp  sgltext.h  sgltextbackend.cpp  sgltextbackend.h
text/backend_glf/: Makefile.am  Makefile.in  glf.c  glf.h  sgltextbackend_glf.cpp  sgltextbackend_glf.h
util/: Makefile.am  Makefile.in  filenotfound.c  memconsumer.cpp  memconsumer.h  readtex.c  readtex.h  sglbaseshader.cpp  sglbaseshader.h  sglfragmentshader.cpp  sglfragmentshader.h  sglimagefile.cpp  sglimagefile.h  sglmaterial.cpp  sglmaterial.h  sglshader.cpp  sglshader.h  sgltextur.cpp  sgltextur.h
