INCLUDES = 
METASOURCES = AUTO
lib_LTLIBRARIES =  libprimitives.la
libprimitives_la_SOURCES =  sglflobj.cpp sglflobj.h sglgeosphere.cpp sglgeosphere.h sglicosahedron.cpp sglicosahedron.h sglloft.cpp sglloft.h sglneck.cpp sglneck.h sglpolygonobj.cpp sglpolygonobj.h sglquader.cpp sglquader.h sglquadricobj.cpp sglquadricobj.h sglvieleck.cpp sglvieleck.h
