INCLUDES = 
METASOURCES = AUTO
SUBDIRS =  backend_glf
lib_LTLIBRARIES =  libtext.la
libtext_la_SOURCES =  sgl3dtext.cpp sgl3dtext.h sglconsole.cpp sglconsole.h sgltextbackend.cpp sgltextbackend.h sgltext.cpp sgltext.h

libtext_la_LIBADD = $(top_builddir)/libsgl/text/backend_glf/libtextbackend_glf.la
